compiler/tests/fail/param_expansion/x86-64/expression_global2.jazz
param int N = 2;
u64[(uint)(64u)N] g = {1};
